@@ -1,5 +1,6 @@
 ????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_06
 * Fix test error on 5.8.8 (reported by Wei Wang)
+* Added '--list', '-L' to list available cluster tags (idea from Markus Manzke)
 
 2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_05
 
